# src/main/java/pl/qprogramming/appbase/web/api/AccountsApiDelegateImpl.java
@@ -2,8 +2,14 @@ package pl.qprogramming.appbase.web.api;
 
 import java.util.List;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
+import pl.qprogramming.appbase.security.AuthoritiesConstants;
 import pl.qprogramming.appbase.service.AccountService;
 import pl.qprogramming.appbase.service.api.dto.AccountDTO;
 
@@ -14,8 +20,8 @@ public class AccountsApiDelegateImpl implements pl.qprogramming.appbase.web.api.
     private final AccountService accountService;
 
     @Override
-    public ResponseEntity<List<AccountDTO>> getAccounts() {
-        return ResponseEntity.ok(this.accountService.getAllUsers());
+    @PreAuthorize("hasAuthority(\"" + AuthoritiesConstants.ADMIN + "\")")
+    public ResponseEntity<Page> getAccounts(Pageable pageable) {
+        return ResponseEntity.ok(accountService.getAllManagedUsers(pageable));
     }
-
 }
